Fix navbar jump on page change, portrait styling

--- a/react-flask-app/src/App.css
+++ b/react-flask-app/src/App.css
@@ -132,7 +132,7 @@
   background-image: url("./images/playfriendtt.PNG");
   background-repeat: no-repeat;
   background-position: 50% 50%;
-  background-size: 150%;
+  background-size: 120%;
   min-width: 150px;
 }
 
@@ -439,21 +439,22 @@ hr {
 
 @media (orientation: portrait) {
   html, body {
-    overflow: hidden;
-    position: relative;
     width: 100vw;
+    overflow-x: hidden;
+  }
+
+  .content-header {
+    font-size: 2.5rem;
+  }
+
+  .App-header {
+    font-size: 1.5rem;
+    margin-bottom: 10px;
   }
 
   .App {
     width: 100vw;
     min-width: 320px;
-    position: absolute;
-    top: 0;
-    left: 0;
-    bottom: -33px;
-    right: -33px;
-    overflow: scroll;
-    padding-right: 16px;
   }
 
   .App-logo-text {
@@ -471,6 +472,7 @@ hr {
 
   .hero {
     position: relative;
+    padding-bottom: 0px;
   }
 
   .hero-div {
